--- a/inf8480_tp2/pom.xml
+++ b/inf8480_tp2/pom.xml
@@ -24,4 +24,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <build>
+        <finalName>tp2</finalName>
+    </build>
 </project>
